--- a/index.html
+++ b/index.html
@@ -360,5 +360,8 @@
         <div class="clear"></div><!--clear-->
       </div><!--container-->
     </footer>
+
+    <script src="js/jquery.js"></script>
+    <script src="js/menu_responsivo.js"></script>
   </body>
 </html>
