Adiciona Menu com scroll dinâmico

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
         <nav class="menu-desktop">
           <ul>
-            <li><a href="">Quem sou</a></li>
-            <li><a href="">Depoimentos</a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Contato</a></li>
+            <li><a href="#sobre">Quem sou</a></li>
+            <li><a href="#depoimentos">Depoimentos</a></li>
+            <li><a href="#videos">Videos</a></li>
+            <li><a href="#contato">Contato</a></li>
           </ul>
         </nav><!--menu-desktop-->
 
         <nav class="menu-mobile">
           <ul>
-            <li><a href="">Quem sou</a></li>
-            <li><a href="">Depoimento</a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Contato</a></li>
+            <li><a href="#sobre">Quem sou</a></li>
+            <li><a href="#depoimentos">Depoimento</a></li>
+            <li><a href="#videos">Videos</a></li>
+            <li><a href="#contato">Contato</a></li>
           </ul>
         </nav><!--menu-mobile-->
 
@@ -109,7 +109,7 @@
       </div><!--container-->
     </section><!--servicos-->
 
-    <section class="perfil-container">
+    <section id="sobre" class="perfil-container">
       <div class="container">
         <div class="perfil-wraper">
           <div class="perfil-wraper2">
@@ -140,7 +140,7 @@
       </div><!--container-->
     </section><!--perfil-container-->
 
-    <section class="videos">
+    <section id="videos" class="videos">
       <div class="container">
         <div class="box-video">
           <iframe
@@ -260,7 +260,7 @@
       </div><!--container-->
     </section><!--tratamentos-->
 
-    <section class="depoimentos">
+    <section id="depoimentos" class="depoimentos">
       <h2>Depoimentos</h2>
       <div class="container">
         <div class="depoimento-single">
@@ -309,7 +309,7 @@
       <div class="clear"></div><!--clear-->
     </section><!--social-->
 
-    <section class="contato">
+    <section id="contato" class="contato">
       <h2>Contato</h2>
       <form>
         <div class="form-wraper w100">
@@ -363,5 +363,6 @@
 
     <script src="js/jquery.js"></script>
     <script src="js/menu_responsivo.js"></script>
+    <script src="js/menuScroll.js"></script>
   </body>
 </html>
