--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/slick.css">
   </head>
   <body>
     <header>
@@ -256,13 +257,39 @@
             </p>
           </div><!--tratamento-single-->
         </div><!--tratamentos-container-->
-        <div class="clear"></div><!--clear-->
+        <!-- <div class="clear"></div>clear -->
       </div><!--container-->
     </section><!--tratamentos-->
 
     <section id="depoimentos" class="depoimentos">
       <h2>Depoimentos</h2>
       <div class="container">
+        <div class="depoimento-single">
+          <quote>
+            "Estrutura e atendimento excepcionais! adorei o atendimento da Dra
+            Fernanda, excelente profissional."
+          </quote>
+          <div class="nome-depoimento">
+            <img
+              src="image/depoimento1.png"
+              alt="imagem da pessoa que deu o depoimento"
+            />
+            <span>Maria Augusta Santos</span>
+          </div><!--nome-depoimento-->
+        </div><!--depoimento-single-->
+        <div class="depoimento-single">
+          <quote>
+            "Estrutura e atendimento excepcionais! adorei o atendimento da Dra
+            Fernanda, excelente profissional."
+          </quote>
+          <div class="nome-depoimento">
+            <img
+              src="image/depoimento1.png"
+              alt="imagem da pessoa que deu o depoimento"
+            />
+            <span>Maria Augusta Santos</span>
+          </div><!--nome-depoimento-->
+        </div><!--depoimento-single-->
         <div class="depoimento-single">
           <quote>
             "Estrutura e atendimento excepcionais! adorei o atendimento da Dra
@@ -362,6 +389,8 @@
     </footer>
 
     <script src="js/jquery.js"></script>
+    <script src="js/slick.js"></script>
+    <script src="js/slides.js"></script>
     <script src="js/menu_responsivo.js"></script>
     <script src="js/menuScroll.js"></script>
   </body>
